Updated shell command ann added error code 500 in case of failure